--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "primeicons": "^7.0.0",
     "tailwindcss": "^4.1.4",
     "vue": "^3.5.13",
+    "vue-i18n": "^11.1.3",
     "vue-router": "^4.5.1"
   },
   "devDependencies": {
